--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -15,6 +15,6 @@
       "*": ["node_modules/*"]
     }
   },
-  "include": ["./**/*"],
+  "include": ["./**/*", "../offline"],
   "exclude": ["node_modules", "dist"]
 } 
