--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
   "ts-node": {
     "esm": true
   },
-  "include": ["client/**/*", "server/**/*", "types/*.ts"],
+  "include": ["client/**/*", "server/**/*", "types/*.ts", "offline"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
