--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
   },
   "dependencies": {
     "@pinecone-database/pinecone": "^5.1.2",
+    "@types/multer": "^1.4.12",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "multer": "^1.4.5-lts.2",
     "nock": "^13.5.5",
     "openai": "^4.69.0",
     "pg": "^8.13.1",
